// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl > Snapshot > With multiple field 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c2::-webkit-input-placeholder {
  color: #00000066;
}

.c2::-moz-placeholder {
  color: #00000066;
}

.c2:-ms-input-placeholder {
  color: #00000066;
}

.c2::placeholder {
  color: #00000066;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c0 .c1 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

.c3 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FFFFFF;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  box-shadow: 0 0 0 3px #F4800B4D, inset 0 0 0 1px #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c3 .c1 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

<div>
  <div
    class="Stack display-flex direction-vertical margin layout"
    data-testid="bezier-react-form-control"
    style="--b-form-control-left-label-wrapper-height: 36px;"
  >
    <div
      class="FormLabel top-position"
    >
      <label
        class="Text typo-13 bold align-left margin LabelText"
        data-testid="bezier-react-form-label"
        id="form-label"
        style="--b-text-color: var(--txt-black-darkest);"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="Stack display-flex direction-vertical justify-start align-stretch wrap margin layout"
      data-testid="bezier-react-form-group"
      id="form-group"
      role="group"
      style="--b-stack-spacing: 6px;"
    >
      <div
        class="Stack display-flex direction-vertical margin layout"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px;"
      >
        <div
          class="FormLabel top-position"
        >
          <label
            class="Text typo-13 bold align-left margin LabelText"
            data-testid="bezier-react-form-label"
            for="field-:r3:"
            id="field-:r3:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            First Inner Label
          </label>
        </div>
        <div
          class="c0"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            autocomplete="off"
            class="c1 c2"
            id="field-:r3:"
            size="36"
            value=""
          />
        </div>
      </div>
      <div
        class="Stack display-flex direction-vertical margin layout"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px;"
      >
        <div
          class="FormLabel top-position"
        >
          <label
            class="Text typo-13 bold align-left margin LabelText"
            data-testid="bezier-react-form-label"
            for="field-:r4:"
            id="field-:r4:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            Second Inner Label
          </label>
        </div>
        <div
          class="c3"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="c1 c2"
            id="field-:r4:"
            size="36"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="HelperTextWrapper top-position"
    >
      <span
        class="Text typo-13 align-left margin HelperText"
        data-testid="bezier-react-form-helper-text"
        id="form-help-text"
        style="--b-text-color: var(--txt-black-dark);"
      >
        Description
      </span>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With multiple field and left label position 1`] = `
.c0 {
  position: relative;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 150px 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c4::-webkit-input-placeholder {
  color: #00000066;
}

.c4::-moz-placeholder {
  color: #00000066;
}

.c4:-ms-input-placeholder {
  color: #00000066;
}

.c4::placeholder {
  color: #00000066;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c2 .c3 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FFFFFF;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  box-shadow: 0 0 0 3px #F4800B4D, inset 0 0 0 1px #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c5 .c3 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

<div>
  <div
    class="c0 c1"
    data-testid="bezier-react-form-control"
    style="--b-form-control-left-label-wrapper-height: 36px;"
  >
    <div
      class="FormLabel left-position"
    >
      <label
        class="Text typo-14 bold align-left margin LabelText"
        data-testid="bezier-react-form-label"
        id="form-label"
        style="--b-text-color: var(--txt-black-darkest);"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="Stack display-flex direction-vertical justify-start align-stretch wrap margin layout"
      data-testid="bezier-react-form-group"
      id="form-group"
      role="group"
      style="--b-stack-spacing: 6px;"
    >
      <div
        class="Stack display-flex direction-vertical margin layout"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px;"
      >
        <div
          class="FormLabel top-position"
        >
          <label
            class="Text typo-13 bold align-left margin LabelText"
            data-testid="bezier-react-form-label"
            for="field-:r6:"
            id="field-:r6:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            First Inner Label
          </label>
        </div>
        <div
          class="c2"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            autocomplete="off"
            class="c3 c4"
            id="field-:r6:"
            size="36"
            value=""
          />
        </div>
      </div>
      <div
        class="Stack display-flex direction-vertical margin layout"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px;"
      >
        <div
          class="FormLabel top-position"
        >
          <label
            class="Text typo-13 bold align-left margin LabelText"
            data-testid="bezier-react-form-label"
            for="field-:r7:"
            id="field-:r7:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            Second Inner Label
          </label>
        </div>
        <div
          class="c5"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="c3 c4"
            id="field-:r7:"
            size="36"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="HelperTextWrapper left-position"
    >
      <span
        class="Text typo-13 align-left margin HelperText"
        data-testid="bezier-react-form-helper-text"
        id="form-help-text"
        style="--b-text-color: var(--txt-black-dark);"
      >
        Description
      </span>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c2::-webkit-input-placeholder {
  color: #00000066;
}

.c2::-moz-placeholder {
  color: #00000066;
}

.c2:-ms-input-placeholder {
  color: #00000066;
}

.c2::placeholder {
  color: #00000066;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c0 .c1 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

<div
  class="Stack display-flex direction-vertical margin layout"
  data-testid="bezier-react-form-control"
  style="--b-form-control-left-label-wrapper-height: 36px;"
>
  <div
    class="FormLabel top-position"
  >
    <label
      class="Text typo-13 bold align-left margin LabelText"
      data-testid="bezier-react-form-label"
      for="form"
      id="form-label"
      style="--b-text-color: var(--txt-black-darkest);"
    >
      Label
    </label>
  </div>
  <div
    class="c0"
    data-testid="bezier-react-text-input"
    size="36"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="c1 c2"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="HelperTextWrapper top-position"
  >
    <span
      class="Text typo-13 align-left margin HelperText"
      data-testid="bezier-react-form-helper-text"
      id="form-help-text"
      style="--b-text-color: var(--txt-black-dark);"
    >
      Description
    </span>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field and left label position 1`] = `
.c0 {
  position: relative;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 150px 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c4::-webkit-input-placeholder {
  color: #00000066;
}

.c4::-moz-placeholder {
  color: #00000066;
}

.c4:-ms-input-placeholder {
  color: #00000066;
}

.c4::placeholder {
  color: #00000066;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c2 .c3 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

<div
  class="c0 c1"
  data-testid="bezier-react-form-control"
  style="--b-form-control-left-label-wrapper-height: 36px;"
>
  <div
    class="FormLabel left-position"
  >
    <label
      class="Text typo-14 bold align-left margin LabelText"
      data-testid="bezier-react-form-label"
      for="form"
      id="form-label"
      style="--b-text-color: var(--txt-black-darkest);"
    >
      Label
    </label>
  </div>
  <div
    class="c2"
    data-testid="bezier-react-text-input"
    size="36"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="c3 c4"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="HelperTextWrapper left-position"
  >
    <span
      class="Text typo-13 align-left margin HelperText"
      data-testid="bezier-react-form-helper-text"
      id="form-help-text"
      style="--b-text-color: var(--txt-black-dark);"
    >
      Description
    </span>
  </div>
</div>
`;
